Name:           hogre-examples
Version:        0.0.1
Cabal-Version:  >= 1.2
License:        OtherLicense
License-File:   LICENSE
Author:         Antti Salonen<ajsalonen at gmail dot com>
Copyright:      Antti Salonen 2009
Stability:      Unstable
Category:       Graphics
Synopsis:       Examples for using Hogre.
Build-type:     Simple

Executable example_01
  Build-Depends:   base, haskell98, hogre>=0.0.1
  Main-is:         Example_01.hs
  Hs-Source-Dirs:  src
  Ghc-options:     -Wall -O2
  extra-libraries: CEGUIOgreRenderer, OgreMain, CEGUIBase

Executable example_02
  Build-Depends:   base, haskell98, hogre>=0.0.1, SDL>=0.4.0
  Main-is:         Example_02.hs
  Hs-Source-Dirs:  src
  Ghc-options:     -Wall -O2
  extra-libraries: CEGUIOgreRenderer, OgreMain, CEGUIBase

